tests/fixtures/invalid/list_bitor_none.py
# Cannot bitwise OR List[int] and None
x: list[int] = [1, 2, 3] | None
